# citylens-engine

./: .dockerignore  .env.example  .gcloudignore  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  production-smoke.yml
api/: Dockerfile  README.md  cloudbuild.yaml  pyproject.toml
api/app/: main.py
api/app/models/: schemas.py
api/app/routes/: api_keys.py  demo.py  health.py  me.py  parcel_intel.py  parcel_workflow.py  run_options.py  runs.py
api/app/services/: auth.py  auth_context.py  core_adapter.py  demo_bundle.py  demo_registry.py  firestore_store.py  gcs_artifacts.py  job_trigger.py  logging.py  oidc_verifier.py  parcel_decision_audit.py  parcel_workflow_actions.py  parcel_workflow_alerts.py  parcel_workflow_analytics.py  plans.py  product_adoption.py  quotas.py  rate_limit.py  retry.py  run_errors.py  run_options.py  run_presenter.py  settings.py
api/tests/: conftest.py  test_admin_key.py  test_api_keys.py  test_auth_email_verified_claim.py  test_auth_quota.py  test_container_contract.py  test_core_contract.py  test_cors.py  test_demo.py  test_docs_key.py  test_health.py  test_me.py  test_oidc_verifier.py  test_parcel_decision_audit.py  test_parcel_intel.py  test_parcel_workflow.py  test_parcel_workflow_actions.py  test_parcel_workflow_alerts.py  test_parcel_workflow_analytics.py  test_product_adoption.py  test_quota_refund.py  test_run_options.py  test_runs_list.py  test_security_headers.py  test_verify_production.py
deploy/: demo_addresses.json  demo_runs.json  deploy_all.sh  deploy_api.sh  deploy_commands.md  deploy_worker.sh
deploy/demo_artifacts/demo-brooklyn-reference/: change.geojson  mesh.ply  run_summary.json
docs/: architecture.md  deploy_gcp.md  github_metadata.md  prospective_outcomes.md  security.md  supply_chain.md
scripts/: parity_reference_case.py  precompute_demo_runs.py  report_product_adoption.py  verify_production.py
worker/: Dockerfile  README.md  cloudbuild.yaml  conftest.py  pyproject.toml  test_core_adapter.py  test_current_footprints.py  test_imagery_inputs.py  test_nysgis.py  test_parity_reference_case.py  test_pipeline_runner.py  test_precompute_demo_runs.py  test_reference_data.py  test_sam2_integration.py  worker.py
worker/services/: core_adapter.py  firestore_store.py  gcs_artifacts.py  imagery_inputs.py  logging.py  nysgis.py  pipeline_runner.py  reference_data.py  run_errors.py  settings.py
