[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "citylens-engine-api"
version = "0.1.0"
description = "Citylens Engine API (Cloud Run)"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Citylens" }]
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.0",
  "google-cloud-firestore>=2.11",
  "google-cloud-storage>=2.14",
  "google-auth>=2.25",
  "requests>=2.31",
  "httpx>=0.25",
  "pyjwt[crypto]>=2.13.0",
  "citylens-core @ git+https://github.com/joshvern/citylens-core.git@v0.3.25",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "httpx>=0.25",
  "ruff>=0.3",
]

# The production core release is part of the uv lock. Updating core is an
# intentional manifest + lockfile change, so rebuilding the same engine commit
# cannot silently resolve a different geospatial dependency graph.

[tool.setuptools]
package-dir = {"" = "app"}

[tool.setuptools.packages.find]
where = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
