[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "citylens-engine-worker"
version = "0.1.0"
description = "Citylens Engine Worker (Cloud Run Job)"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Citylens" }]
dependencies = [
  "numpy>=1.23",
  "pillow>=10.0",
  "pydantic>=2.0",
  "google-cloud-firestore>=2.11",
  "google-cloud-storage>=2.14",
  "google-auth>=2.25",
  "requests>=2.31",
  "fiona>=1.9",
  "pyproj>=3.0",
  "rasterio>=1.3",
  "shapely>=2.0",
  "torch==2.13.0",
  "torchvision==0.28.0",
  "citylens-core[sam2,lidar] @ git+https://github.com/joshvern/citylens-core.git@v0.3.25",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "ruff>=0.3"]

# The worker's core, SAM2, LiDAR, and CPU Torch graph is locked at the
# workspace root. Updating any of these is an intentional manifest + lockfile
# change rather than an unconstrained container rebuild.

[tool.setuptools]
py-modules = ["worker"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
